# lovely-injector

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  build.bat  flake.nix
.github/workflows/: benchmark.yml  release.yml
crates/dobby-sys/: .gitignore  Cargo.toml  README.md  bind.h  build.rs  gen.sh
crates/dobby-sys/src/: ffi.rs  lib.rs
crates/liblovely/: Cargo.toml  README.md  gen-h.lua  lovely.h  luajit.patch
crates/liblovely/src/: lib.rs
crates/lovely-android/: Cargo.toml
crates/lovely-android/src/: lib.rs  lualib.rs
crates/lovely-core/: Cargo.toml  lovely.lua
crates/lovely-core/benches/: README.md  patches.rs
crates/lovely-core/benches/assets/: sample_buffer.txt  sample_buffer_short.txt
crates/lovely-core/src/: args.rs  chunk_vec_cursor.rs  config.rs  dump.rs  hud.rs  lib.rs  log.rs  manifest.rs  patch.rs  patch_table.rs  sys.rs
crates/lovely-core/src/patch/: copy.rs  loader.rs  mod.rs  module.rs  patch_types.rs  pattern.rs  regex.rs  table.rs  vars.rs
crates/lovely-mac/: Cargo.toml  RunLovely.command  run_lovely_macos.sh
crates/lovely-mac/src/: lib.rs
crates/lovely-unix/: Cargo.toml  Info.plist  install_lovely_macos_bundle.sh  run_lovely_l2dplayer_macos.command  run_lovely_linux.sh  run_lovely_macos.sh  run_lovely_macos_AA.command  setup_lovely_macos.sh
crates/lovely-unix/resources-mac/: Info.plist  application.icns  run_lovely.sh
crates/lovely-unix/src/: lib.rs  lualib.rs
crates/lovely-win/: Cargo.toml  build.rs
crates/lovely-win/src/: lib.rs  lualib.rs
crates/lovely-win/src/util/: mod.rs
src/: lib.rs  manifest.rs  patch.rs  sys.rs
