[package]
name = "love-injector"
version = "0.1.0"
edition = "2021"

[lib]
name = "dwmapi"
crate-type = ["cdylib"]

[dependencies]
color-eyre = "0.6.2"
dirs = "5.0.1"
getargs = "0.5.0"
libc = "0.2.153"
libloading = "0.8.3"
once_cell = "1.19.0"
regex-lite = "0.1.5"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.10"
walkdir = "2.5.0"
widestring = "1.0.2"
wildmatch = "2.3.0"
windows = { version = "0.54.0", features = ["Win32_System_Console", "Win32_System", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem", "Win32_UI", "Win32_Security", "Win32_UI_WindowsAndMessaging"] }

[dependencies.retour]
version = "0.4.0-alpha.1"
features = ["static-detour"]

[build-dependencies]
forward-dll = "0.1.13"
