[package]
name = "lovely-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
getargs = "0.5.0"
libc = "0.2.153"
libloading = "0.8.3"
once_cell = "1.19.0"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
walkdir = "2.5.0"
wildmatch = "2.3.0"
log = "0.4.21"
ropey = "1.6.1"
regex-cursor = "0.1.4"
