[package]
name = "lovely-core"
version = "0.8.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
getargs = "0.5.0"
libc = "0.2.153"
libloading = "0.8.3"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
walkdir = "2.5.0"
wildmatch = "2.3.0"
log = "0.4.21"
regex-cursor = "0.1.4"
regex-lite = "0.1.5"
chrono = "0.4.38"
serde_ignored = "0.1.10"
itertools = "0.13.0"
crop = "0.4.2"
anyhow = "1.0.100"
zip = "6.0.0"

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
tempfile = "3"

[[bench]]
name = "patches"
harness = false
