[package]
name = "lovely-win"
version = "0.1.0"
edition = "2021"

[lib]
name = "version"
crate-type = ["cdylib"]

[dependencies]
lovely-core = { version ="0.6.0", path = "../lovely-core" }

itertools = "0.13.0"
libc = "0.2.141"
once_cell = "1.19.0"
widestring = "1.0.2"


[dependencies.retour]
git = "https://github.com/Hpmason/retour-rs.git"
features = ["static-detour"]

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Console",
    "Win32_System",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_UI",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies.forward-dll]
version = "0.1.13"
